Player search script added to indentify talents.

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ DATABASE=FootballStats
 HOST=localhost
 NAME=root
 PASSWORD=password
+DEFENCE_TABLE=defense
+CREATIVE_ACTIONS_TABLE=gca
+MISCELLANEOUS_TABLE=misc
+PASSING_TABLE=passing
+PASSING_TYPES_TABLE=passing_types
+POSSESSION_TABLE=possession
+SHOOTING_TABLE=shooting
